# CryptoStream

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
flink-job/: Dockerfile  build.sbt
flink-job/src/main/resources/: alert.avsc  price_aggregate.avsc  trade.avsc
flink-job/src/main/scala/io/cryptostream/: FlinkJob.scala
producer/: Dockerfile  __init__.py  producer.py
producer/tests/: test_producer.py
