[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptostream"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "websocket-client>=1.8.0",
    "kafka-python-ng>=2.2.3",
    "fastavro>=1.9.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "genbadge[coverage]>=1.1",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # conflicts with D211 (no-blank-line-before-class)
    "D213",   # conflicts with D212 (multi-line-summary-first-line)
    "COM812", # conflicts with ruff formatter
    "ISC001", # conflicts with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"producer/tests/**" = [
    "S101",    # assert statements are expected in tests
    "ANN",     # type annotations not required in test functions
    "D",       # docstrings not required in test functions
    "PLR2004", # magic value comparisons are fine in assertions
]

[tool.pytest.ini_options]
testpaths = ["producer/tests"]
pythonpath = ["."]
addopts = "--cov=producer.producer --cov-report=term-missing --cov-report=xml:coverage.xml --cov-fail-under=80"

[tool.coverage.run]
source = ["producer"]
omit = ["producer/tests/*"]
